# delete-git-branches

./: Cargo.toml  README.md
src/: main.rs
