[package]
name = "delete-git-branches"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
thiserror = "1.0.15"
crossterm = "0.17.3"
chrono = "0.4.11"
